# typst-docx

./: .gitignore  Cargo.toml  README.md
crates/typst-docx/: Cargo.toml
crates/typst-docx-cli/: Cargo.toml
crates/typst-docx-cli/src/: args.rs  main.rs  world.rs
crates/typst-docx/src/: font.rs  frame.rs  image.rs  lib.rs  package.rs  page.rs  paint.rs  shape.rs  text.rs  write.rs
crates/typst-docx/tests/: export.rs
docs/: PRODUCT-PLAN.md  QA.md
fixtures/: blank.docx  blank.typ  calibration.typ  gradients.typ  images.docx  images.typ  shapes.docx  shapes.typ  ~$libration.docx
scripts/: imgdiff.py  posdiff.py  visreg.sh
