[package]
name = "typst-docx"
description = "Export Typst paged documents as visually faithful DOCX files"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
typst-library = { workspace = true }
typst-layout = { workspace = true }
typst-syntax = { workspace = true }
ecow = { workspace = true }
ttf-parser = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
roxmltree = { workspace = true }
typst = { workspace = true }
typst-kit = { workspace = true, features = ["embedded-fonts"] }
